--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     </header>
     <nav>
         <a href="#about">About</a>
+        <a href="#cv">CV</a>
         <a href="#research">Research</a>
         <a href="#teaching">Teaching</a>
         <a href="#packages">Packages</a>
@@ -156,6 +157,10 @@
                 <div class="portrait-wrap" role="img" aria-label="Portrait of Ye Sun"></div>
                 <p class="about-text">Hi all, welcome to my page! I am a PhD student in Economics at the University of Cambridge. I am supervised by <a href="https://vasco-m-carvalho.github.io/" target="_blank">Vasco Carvalho</a>. My research interests are International Trade, Firm Dynamics, Macroeconomics.</p>
             </div>
+        </section>
+        <section id="cv" class="section">
+            <h2>Curriculum Vitae</h2>
+            <p><span style="color:#559499">|</span> <a href="files/CV/cv.pdf" target="_blank">download</a> <span style="color:#559499">|</span></p>
         </section>
         <section id="research" class="section after-portrait">
             <h2>Work in Progress</h2>
@@ -175,7 +180,7 @@
             <div class="research-project">
                 <p class="research-title">Endogenous Plucking Through Networks: The Plucking Paradox</p>
                 <p class="research-coauthors">with <a href="https://sites.google.com/view/hanbaeklee/" target="_blank">Hanbaek Lee</a></p>
-                <p class="research-attachement">| <a href="https://hanbaeklee.github.io/Webpage/Lee_Sun_2026.pdf" target="_blank">paper</a> |</p>
+                <p class="research-attachement">| <a href="https://hanbaeklee.github.io/Webpage/Lee_Sun_2026.pdf" target="_blank">paper</a> | <a href="https://ye-sun-econ.github.io/endogenous_plucking_demo/" target="_blank">interactive demo</a> |</p>
                 <p class="research-abstract">We develop a model in which firms endogenously build production networks during expansions. Denser networks raise efficiency in good times but amplify downturns when productivity falls, generating size and duration dependence in recessions. We characterize the optimal policy and show a “plucking paradox”: the planner prefers higher normal-time output despite greater exposure to rare, severe contractions.</p>
             </div>
         </section>
